objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginer</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>DateTime</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>